# behave

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: AGENT.md  ARCHITECTURE.md  CLI.md  MATCHERS.md  RELEASE.md  RELIABILITY.md  ROADMAP.md  USER_GUIDE.md  feature_competition.md
docs/macros/: behave.md  expect.md  expect_no_panic.md  expect_panic.md  skip_when.md
docs/matchers/: README.md  all_of.md  any_of.md  expect_no_panic.md  expect_panic.md  match_error.md  not.md  not_matching.md  to_approximately_equal.md  to_approximately_equal_within.md  to_be_at_least.md  to_be_at_most.md  to_be_empty.md  to_be_err.md  to_be_err_with.md  to_be_false.md  to_be_greater_than.md  to_be_less_than.md  to_be_none.md  to_be_ok.md  to_be_ok_with.md  to_be_some.md  to_be_some_with.md  to_be_true.md  to_contain.md  to_contain_all_of.md  to_contain_entry.md  to_contain_key.md  to_contain_regex.md  to_contain_substr.md  to_contain_value.md  to_end_with.md  to_equal.md  to_have_length.md  to_have_str_length.md  to_match.md  to_match_regex.md  to_not_be_empty.md  to_not_equal.md  to_satisfy.md  (+1 more)
examples/: custom_matcher.rs  parameterized.rs  quickstart.rs  setup_inheritance.rs  teardown.rs
examples/cli-workspace/: Cargo.toml  README.md
examples/cli-workspace/crates/api/: Cargo.toml  behave.toml
examples/cli-workspace/crates/api/src/: lib.rs
examples/cli-workspace/crates/api/tests/: checkout.rs
examples/cli-workspace/crates/domain/: Cargo.toml
examples/cli-workspace/crates/domain/src/: lib.rs
examples/cli-workspace/crates/domain/tests/: pricing.rs
macros/: Cargo.toml
macros/src/: codegen.rs  parse.rs  slug.rs
scripts/: test-cli-fixture.sh  test-markdown-docs.sh
src/: combinators.rs  custom.rs  error.rs  expectation.rs  lib.rs  soft.rs
src/cli/: config.rs  context.rs  error.rs  filter.rs  history.rs  mod.rs  output.rs  parser.rs  render.rs  runner.rs  tree.rs  watch.rs
src/matchers/: boolean.rs  collections.rs  display.rs  duration.rs  equality.rs  error_chain.rs  float.rs  hashmap.rs  http.rs  json.rs  mod.rs  option.rs  ordering.rs  paths.rs  regex.rs  result.rs  sequences.rs  sets.rs  strings.rs  url_matchers.rs
tests/: examples.rs  smoke.rs
tests/common/: mod.rs
