[package]
name = "crate-name"
version = "0.1.0" # keep in sync with VERSION file (single source of truth)
edition = "2021"
rust-version = "1.75"
description = "A short description of what this crate does."
license = "Apache-2.0"
repository = "https://github.com/username/crate-name"
homepage = "https://github.com/username/crate-name"
documentation = "https://docs.rs/crate-name"
readme = "README.md"
keywords = []
categories = []

[features]
default = ["std"]
std = []
# Optional integrations — use dep: syntax to avoid implicit feature names
# serde = ["dep:serde"]
# async = ["dep:tokio"]

[dependencies]
# serde = { version = "1", features = ["derive"], optional = true }
# tokio = { version = "1", optional = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Specific high-value denials
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Allow pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
